fix: disable line break in thread tree

--- a/app/assets/stylesheets/threads.css.scss
+++ b/app/assets/stylesheets/threads.css.scss
@@ -64,6 +64,7 @@ a.thread-forum-plate, a.thread-forum-plate:visited {
 
   header {
     line-height:1.4em;
+    white-space:nowrap;
 
     h2, h3 {
       font-size:1em;
